@@ -1,3 +1,9 @@
+2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/clam.boot, src/interp/comp.lisp,
+	src/interp/bootlex.lisp, src/interp/g-boot.boot
+	src/interp/vmlisp.lisp: Simplify COMP370.
+
 2011-05-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/g-boot.boot, src/interp/macros.lisp:
